--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-
-.streamlit/secrets.toml
+C:\\Users\Akriti Kakkar\\Downloads\\trial_dashboard\\trial_dashboard - Copy\\repository_test\\.streamlit\secrets.toml
