--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-C:\\Users\Akriti Kakkar\\Downloads\\trial_dashboard\\trial_dashboard - Copy\\repository_test\\.streamlit\secrets.toml
+.streamlit/secrets.toml
